finish odin recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="lasagna.html">Lasagna</a>
+    <p><a href="lasagna.html">Lasagna</a></p>
+    <p><a href="pizza.html">Pizza</a></p>
+    <p><a href="s-eggs.html">Scrambled Eggs</a></p>
 </body>
 </html>
